Fixed bugs, straightened and added gaps
right and left now correspond to the correct divs
the links are now all on a horizontal line
there are gaps between each item on the header

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -22,6 +22,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 10px;
 }
 
 .logo {
@@ -48,10 +49,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px
 }
 
 .right{
   display: flex;
+  gap: 15px;
 }
 
 .left{
